fix: login page spacing

--- a/src/globals.css
+++ b/src/globals.css
@@ -62,13 +62,3 @@ html,
   height: 100%;
   width: 100%;
 }
-
-/* spin animation */
-@keyframes lds-spinner {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
